# ru_myougiden

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  config.toml  deny.toml
.github/workflows/: rust.yml
misc/: create_test_file.py  demo.ascii  demo.tape
src/: config.rs  indexer.rs  main.rs
