[package]
name = "akasabi"
version = "0.1.0"
edition = "2021"
description = "A tool for searching Japanese text"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive", "env"] }
env_logger = "0.10.0"
etcetera = "0.8.0"
flate2 = "1.0.26"
itertools = "0.10.5"
lindera-core = "0.25.0"
lindera-dictionary = "0.25.0"
lindera-tantivy = { version = "0.25.0", features = ["ipadic"] }
reqwest = { version = "0.12.0", features = ["blocking"] }
serde = { version = "1.0.164" }
tantivy = "0.20.2"
toml = { version = "0.7.5" }
wana_kana = "3.0.0"
xml = "0.8.10"
yansi = "0.5.1"
time = "0.3.35"

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"

[dev-dependencies]
tempfile = "3.6.0"
